--- a/www/index.html
+++ b/www/index.html
@@ -48,10 +48,10 @@
    See http://app-framework-software.intel.com/documentation.php#afui/afui_jquery
   -->
 		<script type="application/javascript" src="js/jquery.min.js"></script>
+		<script type="application/javascript" src="sidebar/js/jquery.event.move.js"></script>
+		<script type="application/javascript" src="sidebar/js/jquery.event.swipe.js"></script>
 		<script type="application/javascript" src="sidebar/js/sidebar.js"></script>
-		<script type="application/javascript" src="sidebar/js/hammer.js"></script>
-		<script type="application/javascript" src="sidebar/js/jquery.hammer.js"></script>
-		<script type="application/javascript" src="sidebar/js/swipe-hammer.js"></script>
+		<script type="application/javascript" src="sidebar/js/swipe.js"></script>
 		<script type="application/javascript" src="js/index_user_scripts.js"></script>
 	</head>
 
@@ -160,7 +160,7 @@
 
 					<footer class="inner-element uib_w_1" data-uib="app_framework/footer" data-ver="0" id="af-footer-0"><a class="widget uib_w_3 d-margins icon home" data-uib="app_framework/button" data-ver="0">Home</a>
 					</footer>
-					<div class="inner-element uib_w_27 uib_sidebar leftbar bar-bg bar-gutter thumb-bg" data-uib="layout/left_sidebar" data-ver="1" data-anim="{'style':'push', 'v':200, 'side':'left'}">
+					<div class="inner-element uib_w_27 uib_sidebar leftbar bar-bg bar-gutter thumb-bg" data-uib="layout/left_sidebar" data-ver="0" data-anim="{'style':'push', 'v':200, 'side':'left'}">
 						<div class="sidebar-content">
 
 							<div class="grid grid-pad urow uib_row_2 row-height-2" data-uib="layout/row" data-ver="0">
